--- a/POS/POS/appsettings.json
+++ b/POS/POS/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=POS_proyect;Username=postgres;Password=Pa$$word1107"
+  },
   "AllowedHosts": "*"
 }
