RateLimiting Authorize implementation

--- a/POS/POS/appsettings.json
+++ b/POS/POS/appsettings.json
@@ -15,5 +15,10 @@
     "AccessTokenExpireMinutes": 15,
     "ExpireMinutes": 60
   },
+  "RateLimiting": {
+    "GlobalLimit": 100,
+    "AuthLimit": 5,
+    "WindowMinutes": 1
+  },
   "AllowedHosts": "*"
 }
