--- a/POS/POS/POS.csproj
+++ b/POS/POS/POS.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c0e7e3f5-aec6-4a8d-aaed-6f9b85a94681</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
